@@ -3,4 +3,5 @@ REQUIRED_APPS = [
     'uliweb.contrib.session', 
     'uliweb.contrib.orm',
     'uliweb.contrib.staticfiles',
+    'uliweb.contrib.form',
 ]
