@@ -1,0 +1,8 @@
+[info]
+catalog = ''
+title = ''
+description = ''
+icon = ''
+author = ''
+version = ''
+homepage = ''
